--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Karla|Lobster" rel="stylesheet">
-  <title>landing-page</title>
+  <title>Michael Green</title>
 </head>
 
 <body>
@@ -29,12 +29,6 @@
     crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-
-  <script>
-    $(window).scroll(function () {
-      $(".arrow").css("opacity", 1 - $(window).scrollTop() / 250);
-    });
-  </script>
 
 </body>
 
